# demo-creator

./: .gitignore  HANDOFF.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
agents/: adjust-narration.md  composite-video.md  detailed-script.md  discover-selectors.md  generate-audio.md  generate-avatar.md  generate-narration.md  preview-narration.md  record-demo.md  rough-outline.md  upload-to-gcs.md  validate-script.md
commands/: create.md  init.md  quick.md  resume.md  validate.md
config/: credentials.schema.json  project-config.schema.json
config/defaults/: nextjs.yaml  python-cli.yaml  react.yaml
docs/: AUDIO_GENERATION_GUIDE.md  QUICK_START_AUDIO.md  SPEC.md  STAGE_7_AUDIO_GENERATION.md  TERMINAL_DEMO.md
examples/: api_demo.yaml  init-and-create-transcript.txt  pytest_demo.yaml
scripts/: check_audio_setup.py  generate_audio.py  list_voices.py  terminal_demo.py
skills/: screenenv.md
skills/asciinema/: SKILL.md
skills/screenenv/: SKILL.md
templates/browser/: crud-demo.yaml  search-filter.yaml  wizard-flow.yaml
templates/hybrid/: api-to-ui.yaml  backend-frontend.yaml
templates/terminal/: cli-walkthrough.yaml  devops-workflow.yaml  installation.yaml
tests/: __init__.py  conftest.py  test_audio_preview.py  test_cache.py  test_context_monitor.py  test_credentials.py  test_errors.py  test_graceful_recorder.py  test_heygen_client.py  test_hybrid_compositor.py  test_integrations.py  test_local_recorder.py  test_manifest.py  test_parallel_audio.py  test_progress.py  test_retry.py  test_selectors.py  test_smart_wait.py  test_stage_cache.py  test_terminal_recorder.py  test_visual_validation.py
utils/: __init__.py  audio_preview.py  cache.py  context_monitor.py  credentials.py  elevenlabs_client.py  errors.py  gcs_client.py  graceful_recorder.py  heygen_client.py  hybrid_compositor.py  integrations.py  local_recorder.py  manifest.py  parallel_audio.py  progress.py  retry.py  screenenv_job.py  selectors.py  smart_wait.py  stage_cache.py  terminal_recorder.py  video_compositor.py  visual_validation.py
